Added swagger documentation
